kubernetes/Deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: sampleapp 
  namespace: dev-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sampleapp
  template:
    metadata:
      labels:
        app: sampleapp 
    spec:
      containers:
        - name: sampleapp 
          image: acrtest123rares.azurecr.io/sampleapp:latest
          ports:
          - containerPort: 80
