kubernetes/bb-pod.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: busybox-pod
spec:
  containers:
  - name: busybox-container
    image: busybox
    command: ["sh", "-c", "sleep 1000"]
