kubernetes/myapp-deployment-file.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-db
  labels:
    app: my-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-db
  template:
    metadata:
      labels:
        app: my-db
    spec:
      containers:
      - name: my-db
        image: busybox
        command: ['sh', '-c', "cat /mysql/db-config/mysql.conf; cat /mysql/db-secret/secret.file; sleep 20"]

        volumeMounts:
        - name: db-config
          mountPath: /mysql/db-config
        - name: db-secret
          mountPath: /mysql/db-secret
          readOnly: true

      volumes:
      - name: db-config
        configMap:
          name: my-configmap-file
      - name: db-secret
        secret:
          secretName: my-secret-file
