kubernetes/myapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - image: busybox
        name: busybox
        command: ['sh', '-c', "printenv MYSQL_USER MYSQL_PWD MYSQL_SERVER; sleep 10"]
