kubernetes/nginx-deployment-with-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-resource
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: nginx
        resources:
          requests: #expected usage
            memory: "64Mi"
            cpu: "250m"
          limits: #limit maximum resource consumption
            memory: "128Mi"
            cpu: "500m"

      - name: log-sidecar
        image: busybox
        command: ['sh', '-c', "while true; do echo sync logs; sleep 20; done"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
