kubernetes/nginx-emptyvol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-emptyvol
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        command: ['sh', '-c']
        args:
        - while true; do
            echo "$(date) INFO some app data" >> /var/log/myapp.log;
            sleep 5;
          done

        volumeMounts:
        - name: log-data
          mountPath: /var/log

      - name: log-sidecar
        image: busybox
        command: ['sh', '-c'] 
        args: 
        - tail -f /var/sidecar/myapp.log
        
        volumeMounts:
        - name: log-data
          mountPath: /var/sidecar

      volumes:
      - name: log-data
        emptyDir: {}
