kubernetes/pod-health-probes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-health-probes
spec:
  containers:
  - name: myapp
    image: nginx
    ports:
      containerPort: 80 
    readinessProbe:
      tcpSocket:
        port: 80
      # tells kubelet to wait 10 seconds before performing first probe
      initialDelaySeconds: 10
      periodSeconds: 5
    livenessProbe:
      tcpSocket:
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 15
