kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
    name: sampleapp
    namespace: dev-cluster
spec:
  selector:
    app.kubernetes.io/name: sampleapp
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9376
    - name: https
      protocol: TCP
      port: 443
      targetPort: 9377
