kubernetes/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  rules:
  - host: host
    http:
      paths:
      - backend:
          service:
            name: service
            port:
              name: port
        path: /path
        pathType: Exact
